feat: zdog-dna background

--- a/src/zdog-dna/style.styl
+++ b/src/zdog-dna/style.styl
@@ -1,6 +1,8 @@
 *
   box-sizing border-box
-  background rgb(39, 86, 162)
+
+$margin = 40px
 
 body
+  background repeating-linear-gradient(90deg, grey, grey 1px, transparent 1px, transparent $margin), repeating-linear-gradient(0deg, grey, grey 1px, transparent 1px, transparent $margin), rgb(39, 86, 162)
   min-height 100vh
